--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/*basic css settings*/
+
 html {
   background-image: url("http://127.0.0.1:8000/media/logo.jpg");
   background-size: cover;
@@ -20,4 +22,3 @@ img {
 .hint {
   text-align: right;
 }
-
